username overflow fixed

--- a/TimiProject/src/app/components/shared/side-nav/side-nav.component.scss
+++ b/TimiProject/src/app/components/shared/side-nav/side-nav.component.scss
@@ -111,3 +111,37 @@ ul {
         margin: 0;
     }
 }
+
+// TEXT OVERFLOW
+.user-name-wrapper h2 {
+    /* important */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.user-name-wrapper,
+.user-name {
+    -webkit-transition: 3.3s;
+    -moz-transition: 3.3s;
+    transition: 3.3s;
+    -webkit-transition-timing-function: linear;
+    -moz-transition-timing-function: linear;
+    transition-timing-function: linear;
+}
+
+.user-name-wrapper {
+    height: 64px;
+    font: normal normal 700 1em/4em Arial, sans-serif;
+    overflow: hidden;
+    width: 9em;
+    cursor: pointer;
+}
+
+.user-name {
+    margin-left: 0em;
+}
+
+.user-name-wrapper:hover .user-name {
+    margin-left: -300px;
+}
